Tue May  3 10:01:15 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am src/tds/Makefile.am:
	- ignore warnings

Sat Apr 30 18:45:49 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/index.html doc/htdoc/news.html doc/htdoc/software.html
	- update the website for 0.63. 

Sat Apr 23 16:45:32 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* src/tds/Makefile.am $(srcdir) not needed on make variables
	* src/dblib/rpc.c blobs as parameters (thanks, Frediano)

Tue Apr 19 13:52:43 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/raiserror.c:
	- fix problem reading data before and after SQLFetch

Mon Apr 18 23:47:09 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/bcp.c src/dblib/unittests/dbmorecmds.c
	* src/dblib/unittests/rpc.c src/dblib/unittests/t0001.c
	* src/dblib/unittests/t0003.c src/dblib/unittests/t0004.c
	* src/dblib/unittests/t0005.c src/dblib/unittests/t0006.c
	* src/dblib/unittests/t0007.c src/dblib/unittests/t0008.c
	* src/dblib/unittests/t0009.c src/dblib/unittests/t0010.c
	* src/dblib/unittests/t0011.c src/dblib/unittests/t0012.c
	* src/dblib/unittests/t0013.c src/dblib/unittests/t0014.c
	* src/dblib/unittests/t0015.c src/dblib/unittests/t0016.c
	* src/dblib/unittests/t0017.c src/dblib/unittests/t0018.c
	* src/dblib/unittests/t0019.c src/dblib/unittests/t0020.c
	* src/dblib/unittests/t0021.c src/dblib/unittests/t0022.c
	* src/dblib/unittests/t0023.c
	- add comments in a standard form to describe the purpose of
	- the test and the functions tested.

Mon Apr 18 11:34:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c: fix a small error in dblib

Mon Apr 18 01:14:40 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* configure.in exclude vms from outputs (use EXTRA_DIST)

Sat Apr 16 19:52:13 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* Makefile.am vms/Makefile.am don't try to generate a vms makefile